src/test/resources/testcases/valid/logical/nested_short_circuit.tc

int main() {
    int a = 1;
    int b = 0;
    int c = 1;
    int val = 0;
    if (a > 0 && (b < 0 || c == 1)) {
        val = 1;
    }
    if ((a == 0 || b == 0) && c == 1) {
        val = val + 1;
    }
    return val;
}

