src/test/resources/testcases/invalid/functions/duplicate_function.tc
int foo() {
    return 1;
}
void foo() { // Duplicate name error
    return;
}
int main() {
    return 0;
}
